# scalarlog

./: README.md  scalarlog.cabal  stack.yaml
app/: Main.hs
src/: Lib.hs  contact.hamlet  graph.julius  home.hamlet  style.cassius  tag.hamlet  tag_graph.julius
src/Lib/: Persist.hs  Template.hs
static/: graph.js
