name:                scalarlog
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://localhost
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  other-modules:       Lib.Persist, Lib.Template
  build-depends:       base >= 4.7 && < 5
                     , monad-logger == 0.3.*
                     , persistent == 2.2.*
                     , persistent-sqlite == 2.2.*
                     , persistent-template == 2.1.*
                     , resourcet == 1.1.*
                     , shakespeare == 2.0.*
                     , text == 1.2.*
                     , time == 1.5.*
                     , yesod == 1.4.*
                     , yesod-static == 1.5.*
  default-language:    Haskell2010

executable scalarlog-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , scalarlog
  default-language:    Haskell2010

test-suite scalarlog-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , scalarlog
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://localhost
